--- a/notebooks/Main.ipynb
+++ b/notebooks/Main.ipynb
@@ -21,8 +21,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9a4bb85",
+   "metadata": {},
+   "source": [
+    "### Conventions\n",
+    " - 1 year == 1.0\n",
+    " - 1 month == 1/12\n",
+    " - 1 day == 1/252\n",
+    " - 0.02 == 2%"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "61ec6e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = 1/252\n",
+    "dW = np.random.randn()*dt\n",
+    "# Mean that dW is 1 day increment with unit annual vol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b00ff8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8689cfc3",
    "metadata": {},
    "outputs": [],
@@ -35,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "55dc10a0",
    "metadata": {},
    "outputs": [],
@@ -53,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "36ea6712",
    "metadata": {},
    "outputs": [],
@@ -63,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7755fd98",
    "metadata": {},
    "outputs": [],
@@ -73,44 +105,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "34d80723",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8802934158342212"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "curve.df(4.5)"
+    "curve.df(0.15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "431b0f86",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.028333333333333332"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curve.zero_rate(4.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2668150f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curve.fwd_rate(1, 1.5)"
    ]
   },
   {
@@ -119,7 +139,53 @@
    "id": "f073a339",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "curve.bump?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16b338d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pylab\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b46d38a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.linspace(0, 10)\n",
+    "plot(t, curve.zero_rate(t), t, curve.bump(0.01).zero_rate(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21f15f0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spread_curve = BaseZeroCurve([0, 5, 10], [0.001, 0.002, 0.003])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ffda9b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.linspace(0, 10)\n",
+    "new_curve = curve + spread_curve\n",
+    "plot(t, curve.zero_rate(t), t, new_curve.zero_rate(t))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,7 +197,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "9e25f2ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cmf_rateslib.products.base_product import BaseProduct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2c56c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = BaseProduct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d94d6c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.get_cashflows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402e3ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.pv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f0c578",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6a62d53f",
    "metadata": {},
    "outputs": [],
@@ -141,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "fbe06b7f",
    "metadata": {},
    "outputs": [],
@@ -151,44 +265,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "273e27e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([9]), array([1]))"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bond.get_cashflows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "0f6ff07a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7633794943368531"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bond.pv(0, curve)"
+    "bond.pv(0, curve + spread_curve)"
    ]
   },
   {
@@ -208,8 +300,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91a3fbde",
+   "metadata": {},
+   "source": [
+    " Simple PCA curve Generator\n",
+    " \n",
+    " $n$ zero rates and $m$ factors\n",
+    " $$\n",
+    "     dZ = U dX\n",
+    " $$\n",
+    " \n",
+    " $$\n",
+    " dX_i = \\sigma_i dW_i \n",
+    " $$\n",
+    " \n",
+    " Mean Reverting PCA curve Generator\n",
+    " \n",
+    " Same as abobe, but:\n",
+    " $$\n",
+    " dX_i = (\\theta_i - X)dt + \\sigma_i dW_i \n",
+    " $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "0c5367fb",
    "metadata": {},
    "outputs": [],
@@ -219,13 +335,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "eec4eb00",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = SimplePCAModel(\n",
-    "    maturities=curve._maturities,\n",
+    "    maturities=[0, 2, 5, 10],\n",
     "    maturity_loadings=np.array([\n",
     "        [1,1,1,1],\n",
     "        [0,1,2,3],\n",
@@ -235,31 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "1f0a601b",
+   "execution_count": null,
+   "id": "0950374a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,) (3,2) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-7315f8053000>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevolve_zero_curve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurve\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Repos/cmf_rateslib/notebooks/../cmf_rateslib/rates/simple_pca.py\u001b[0m in \u001b[0;36mevolve_zero_curve\u001b[0;34m(self, start_curve, num_periods, dt)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;31m# increments of PCA factors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0mdX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msigma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mdW\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;31m# increments of zero rates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (3,2) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.evolve_zero_curve(curve, 2, 1)"
+    "model.evolve_zero_curve(curve, 5, 1/252)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5a8061d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([[2,2,2], [3,3,3]]).T * np.array([2,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06e4d3dc",
    "metadata": {},
    "outputs": [],
    "source": []
