Linear interpolation & rolldown

--- a/notebooks/Main.ipynb
+++ b/notebooks/Main.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3bacf8aa",
    "metadata": {},
    "source": [
     "# CMF Rateslib Project"
@@ -10,19 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6377227d",
-   "metadata": {},
-   "source": [
-    "## 3 Sub-Projects:\n",
-    "    - Rates Models\n",
-    "    - FI Products\n",
-    "    - Curve Building\n",
-    "  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9a4bb85",
    "metadata": {},
    "source": [
     "### Conventions\n",
@@ -35,27 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ec6e98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt = 1/252\n",
-    "dW = np.random.randn()*dt\n",
-    "# Mean that dW is 1 day increment with unit annual vol"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b00ff8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8689cfc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55dc10a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +41,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9989b4e",
    "metadata": {},
    "source": [
     "# Curves"
@@ -86,67 +49,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36ea6712",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cmf_rateslib.curves.base_curve import BaseZeroCurve"
+    "from cmf_rateslib.curves.base_curve import BaseZeroCurve\n",
+    "from cmf_rateslib.curves.zero_curve import ZeroCurve"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7755fd98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curve = BaseZeroCurve([0,2,5,10], [0.01, 0.02, 0.03, 0.03])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34d80723",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curve.df(0.15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "431b0f86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curve.zero_rate(4.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2668150f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curve.fwd_rate(1, 1.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f073a339",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curve.bump?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16b338d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,227 +67,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b46d38a",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "t = np.linspace(0, 10)\n",
-    "plot(t, curve.zero_rate(t), t, curve.bump(0.01).zero_rate(t))"
+    "### Interpolation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21f15f0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spread_curve = BaseZeroCurve([0, 5, 10], [0.001, 0.002, 0.003])"
+    "curve = ZeroCurve([0.1, 0.2, 0.3, 0.5, 0.7, 1, 2, 3, 5, 10], [0.0751, 0.0763, 0.0773, 0.079, 0.0804, 0.0819, 0.0838, 0.0838, 0.0825, 0.0808])\n",
+    "curve.lin_interpolate('zero_rates')\n",
+    "curve.plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ffda9b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.linspace(0, 10)\n",
-    "new_curve = curve + spread_curve\n",
-    "plot(t, curve.zero_rate(t), t, new_curve.zero_rate(t))"
+    "curve = ZeroCurve([0.1, 0.2, 0.3, 0.5, 0.7, 1, 2, 3, 5, 10], [0.0751, 0.0763, 0.0773, 0.079, 0.0804, 0.0819, 0.0838, 0.0838, 0.0825, 0.0808])\n",
+    "curve.lin_interpolate('log_discount_factors')\n",
+    "curve.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curve = ZeroCurve([0.1, 0.2, 0.3, 0.5, 0.7, 1, 2, 3, 5, 10], [0.0751, 0.0763, 0.0773, 0.079, 0.0804, 0.0819, 0.0838, 0.0838, 0.0825, 0.0808])\n",
+    "curve.lin_interpolate('forward_rates')\n",
+    "curve.plot()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "430f98ab",
    "metadata": {},
    "source": [
-    "# Products"
+    "### Rolldown"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e25f2ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cmf_rateslib.products.base_product import BaseProduct"
+    "curve = ZeroCurve([0.1, 0.2, 0.3, 0.5, 0.7, 1, 2, 3, 5, 10], [0.0751, 0.0763, 0.0773, 0.079, 0.0804, 0.0819, 0.0838, 0.0838, 0.0825, 0.0808])\n",
+    "curve.roll(0.25)\n",
+    "curve.plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e2c56c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = BaseProduct()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d94d6c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.get_cashflows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "402e3ba7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.pv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98f0c578",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a62d53f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cmf_rateslib.products.bonds import ZCBond"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbe06b7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bond = ZCBond(expiry=9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "273e27e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bond.get_cashflows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f6ff07a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bond.pv(0, curve + spread_curve)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "360b682c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09ecfdae",
-   "metadata": {},
-   "source": [
-    "# Rates Models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "91a3fbde",
-   "metadata": {},
-   "source": [
-    " Simple PCA curve Generator\n",
-    " \n",
-    " $n$ zero rates and $m$ factors\n",
-    " $$\n",
-    "     dZ = U dX\n",
-    " $$\n",
-    " \n",
-    " $$\n",
-    " dX_i = \\sigma_i dW_i \n",
-    " $$\n",
-    " \n",
-    " Mean Reverting PCA curve Generator\n",
-    " \n",
-    " Same as abobe, but:\n",
-    " $$\n",
-    " dX_i = (\\theta_i - X)dt + \\sigma_i dW_i \n",
-    " $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c5367fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cmf_rateslib.rates.simple_pca import SimplePCAModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eec4eb00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = SimplePCAModel(\n",
-    "    maturities=[0, 2, 5, 10],\n",
-    "    maturity_loadings=np.array([\n",
-    "        [1,1,1,1],\n",
-    "        [0,1,2,3],\n",
-    "        [2,1,1,2]]).T,\n",
-    "        factor_vols=[0.01, 0.005, 0.001])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0950374a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.evolve_zero_curve(curve, 5, 1/252)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5a8061d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array([[2,2,2], [3,3,3]]).T * np.array([2,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06e4d3dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -394,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
