--- a/notebooks/Models/Tasks.ipynb
+++ b/notebooks/Models/Tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution__count": 4,
    "id": "a266b4ef",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution__count": 5,
    "id": "39a1c100",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "c897069a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
+   "codemirror__mode": {
     "name": "ipython",
     "version": 3
    },
