--- a/notebooks/Products/Tasks.ipynb
+++ b/notebooks/Products/Tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution__count": 1,
    "id": "acff9104",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "2. FRA\n",
     "3. IR Futures\n",
     "4. Libor IRS\n",
-    "       pv(asof, forward_curve, discount_curve)\n",
+    "       pv(asof, forward__curve, discount__curve)\n",
     "5. OIS\n",
     "6.  *Swaptions, etc....\n",
     "\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "2be41e6e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
+   "codemirror__mode": {
     "name": "ipython",
     "version": 3
    },
