--- a/notebooks/Curves/Tasks.ipynb
+++ b/notebooks/Curves/Tasks.ipynb
@@ -2,31 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9ed64ad4",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "cmf_rateslib_root = '../../'\n",
     "import sys\n",
     "if cmf_rateslib_root not in sys.path:\n",
     "    sys.path.append(cmf_rateslib_root)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "662c8718",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "from cmf_rateslib.curves.zero_curve import ZeroCurve"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "fa4d6aa3",
-   "metadata": {},
    "source": [
     "# Tasks for Curves Group\n",
     "Extend Functionality of ZeroCurve Object\n",
@@ -52,25 +48,25 @@
     "         - bond curve (only needs coupon bonds)\n",
     "         - OIS curve (only OIS instruments)\n",
     "         - Libor Curve (need OIS Swaps & LIBOR swaps)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ca96016",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
+   "codemirror__mode": {
     "name": "ipython",
     "version": 3
    },
@@ -79,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
