--- a/notebooks/Main.ipynb
+++ b/notebooks/Main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "61ec6e98",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "6b00ff8c",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "8689cfc3",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "55dc10a0",
    "metadata": {},
    "outputs": [],
@@ -85,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "36ea6712",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cmf_rateslib.curves.base_curve import BaseZeroCurve"
+    "from cmf_rateslib.curves.base__curve import BaseZeroCurve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "7755fd98",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "34d80723",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "431b0f86",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "2668150f",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "f073a339",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "16b338d1",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "5b46d38a",
    "metadata": {},
    "outputs": [],
@@ -167,24 +167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "21f15f0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spread_curve = BaseZeroCurve([0, 5, 10], [0.001, 0.002, 0.003])"
+    "spread__curve = BaseZeroCurve([0, 5, 10], [0.001, 0.002, 0.003])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "2ffda9b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "t = np.linspace(0, 10)\n",
-    "new_curve = curve + spread_curve\n",
-    "plot(t, curve.zero_rate(t), t, new_curve.zero_rate(t))"
+    "new__curve = curve + spread__curve\n",
+    "plot(t, curve.zero_rate(t), t, new__curve.zero_rate(t))"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "9e25f2ea",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "0e2c56c8",
    "metadata": {},
    "outputs": [],
@@ -217,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "2d94d6c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.get_cashflows()"
+    "p.get__cashflows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "402e3ba7",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "98f0c578",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "6a62d53f",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "fbe06b7f",
    "metadata": {},
    "outputs": [],
@@ -265,27 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "273e27e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bond.get_cashflows()"
+    "bond.get__cashflows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "0f6ff07a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bond.pv(0, curve + spread_curve)"
+    "bond.pv(0, curve + spread__curve)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "360b682c",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "0c5367fb",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "eec4eb00",
    "metadata": {},
    "outputs": [],
@@ -351,17 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "0950374a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.evolve_zero_curve(curve, 5, 1/252)"
+    "model.evolve_zero__curve(curve, 5, 1/252)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "b5a8061d",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution__count": null,
    "id": "06e4d3dc",
    "metadata": {},
    "outputs": [],
@@ -380,12 +380,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
+   "codemirror__mode": {
     "name": "ipython",
     "version": 3
    },
@@ -394,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
