--- a/notebooks/Products/Tasks.ipynb
+++ b/notebooks/Products/Tasks.ipynb
@@ -41,9 +41,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd31d55c",
+   "metadata": {},
+   "source": [
+    "# Must have functionality:\n",
+    "\n",
+    "1. cashflows -> [times], [cash values]\n",
+    "2. pv(asof, curve[s]) --> value\n",
+    "3. dv01, duration  --> value\n",
+    "5. rolldown -- > value\n",
+    "\n",
+    "\n",
+    "Must have for bonds:\n",
+    "\n",
+    "\n",
+    "- yield(price) -> yield to maturity \n",
+    "\n",
+    "- price(yield) -> price \n",
+    "\n",
+    "- clean price / dirty price / accrued interest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2be41e6e",
+   "id": "8d53eb83",
    "metadata": {},
    "outputs": [],
    "source": []
